--- a/style.css
+++ b/style.css
@@ -148,6 +148,8 @@ footer
     font-family: 'Ojack', Arial, serif;
     text-align:center;
     text-color: black;
+    margin-top:25%;
+    margin-left:-11%;
 
 }
 
