--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ footer
 a
 {
     font-family: 'Ojack', Arial, serif;
-    color: white;
+    color: red;
     box-shadow: 0px 1px 6px black;
 }
 
